# quicksave

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
quicksave/: cli.py  store.py
tests/: test_cli.py  test_store.py
